Fixing spacing

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,4 +1,4 @@
-#intro {
+main {
   width: 100%;
   display: block;
 }
